--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="ut f-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link rel="stylesheet" href="css/styles.css" />
+     
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
 
-    <header class="jumbotron">
+    <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -22,28 +25,29 @@
     </header>
 
     <div class="container">
-            <div class="row">
+            <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2>Discover & Review</h2>
+                    <h2 class="text-sm-right">Discover & Review</h2>
                 </div>
                 <div class="col">
                     <h3>Our Campsites</h3>
                     <p>Explore our growing database of curated campsites and leave your own reviews!</p>
                 </div>
+            </div>
 
-            <div class="row">
+            <div class="row row-content align-items-center">
                 <div class="col-sm-4 col-md-3">
                     <h2>Featured Campsites</h2>
                 </div>
                 <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                        <h3>React Lake Campground</h3>
+                        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
                 </div>
 
-            <div class="row">
-                <div class="col-sm-4 order-sm-last col-md-3"></div>
-                    <h2>Our Community Partners</h2>
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 order-sm-last col-md-3">
+                    <h2 class="text-sm-right">Our Community Partners</h2>
                 </div>
                 <div class="col">
                     <h3>Bootstrap Outfitters</h3>
@@ -64,14 +68,14 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="col-6 col-sm-5">
+                    <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a href="http://instagram.com/">Instagram</a>
                         <a href="http://facebook.com/">Facebook</a>
                         <a href="http://twitter.com/">Twitter</a>
                         <a href="http://youtube.com/">YouTube</a>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 text-center">
                         Tel: 1-206-555-1234<br />
                         Email: campsites@nucamp.co
                     </div>
