--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
 <head>
+    <!-- Required meta tags always come first -->
     <meta charset="ut f-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <!-- Additional CSS must be placed after Boostrap CSS-->
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" /> 
      
     <title>NuCamp: A Better Way To Camp</title>
 </head>
@@ -32,10 +38,10 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-home fa-lg"> </span> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> <span class="fa fa-info fa-lg"> </span> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-list fa-lg"> </span> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-address-card fa-lg"></span>  Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -87,14 +93,14 @@
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a href="http://instagram.com/">Instagram</a>
-                        <a href="http://facebook.com/">Facebook</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
+                        <a href="http://instagram.com/"><span class="fa fa-instagram"></span> </a>
+                        <a href="http://facebook.com/"><span class="fa fa-facebook"></span> </a>
+                        <a href="http://twitter.com/"><span class="fa fa-twitter"></span> </a>
+                        <a href="http://youtube.com/"><span class="fa fa-youtube"></span> </a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        Tel: 1-206-555-1234<br />
-                        Email: campsites@nucamp.co
+                        <span class="fa fa-phone fa-lg text-primary"> </span> 1 -206-555-1234<br />
+                        <span class="fa fa-envelope fa-lg text-primary"> </span> campsites@nucamp.co
                     </div>
             </div>
         </div>
