--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Additional CSS must be placed after Boostrap CSS-->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="css/styles.css" /> 
      
@@ -41,7 +42,7 @@
                     <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-home fa-lg"> </span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html"> <span class="fa fa-info fa-lg"> </span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-list fa-lg"> </span> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-address-card fa-lg"></span>  Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"> <span class="fa fa-address-card fa-lg"></span>  Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -88,19 +89,19 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="aboutus.html">About</a></li>
                             <li><a href="#">Sites</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contactus.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a href="http://instagram.com/"><span class="fa fa-instagram"></span> </a>
-                        <a href="http://facebook.com/"><span class="fa fa-facebook"></span> </a>
-                        <a href="http://twitter.com/"><span class="fa fa-twitter"></span> </a>
-                        <a href="http://youtube.com/"><span class="fa fa-youtube"></span> </a>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><span class="fa fa-instagram"></span></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><span class="fa fa-facebook"></span></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><span class="fa fa-twitter"></span></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><span class="fa fa-youtube"></span></a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <span class="fa fa-phone fa-lg text-primary"> </span> 1 -206-555-1234<br />
-                        <span class="fa fa-envelope fa-lg text-primary"> </span> campsites@nucamp.co
+                        <a role="button" class="btn btn-link" href="tel:+1206551234"> <span class="fa fa-phone fa-lg text-primary"></span> 1-206-555-1234 </a><br/>
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <span class="fa fa-envelope-o fa-lg text-primary"></span> campsites@nucamp.co</a>
                     </div>
             </div>
         </div>
