--- a/aboutus.html
+++ b/aboutus.html
@@ -68,7 +68,8 @@
                     trekkers on our staff personally verify each campsite to make 
                     sure that they are up to our standards. We also present a platform 
                     for campers to share reviews on campsites they have visited with each 
-                    other.</p>
+                    other.
+                </p>
             </div>
 
                 <div class="col-sm-6">
