--- a/index.html
+++ b/index.html
@@ -1,131 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags always come first -->
     <meta charset="ut f-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
 
     <!-- Additional CSS must be placed after Boostrap CSS-->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" /> 
-     
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+
     <title>NuCamp: A Better Way To Camp</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <header class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="img/logo.png" class="img-fluid" />
-                 </div>
-                <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-4 col-sm-3 col-md-2 align-self-center">
+            <img src="img/logo.png" class="img-fluid" />
+          </div>
+          <div class="col">
+            <h1>NuCamp</h1>
+            <h2>a better way to camp</h2>
+          </div>
+          <div class="col col-md-4 col-xl-4 mt-4">
+            <a class="btn btn-info btn-lg" href="#reserveForm"
+              >Reserve Campsite</a
+            >
+          </div>
         </div>
+      </div>
     </header>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" 
-            data-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="nucampNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"> <span class="fa fa-home fa-lg"> </span> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"> <span class="fa fa-info fa-lg"> </span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"> <span class="fa fa-list fa-lg"> </span> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"> <span class="fa fa-address-card fa-lg"></span>  Contact</a></li>
-                </ul>
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="#"
+          ><img src="img/logo.png" height="30" width="30"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#nucampNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="nucampNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                <span class="fa fa-home fa-lg"> </span> Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">
+                <span class="fa fa-info fa-lg"> </span> About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span class="fa fa-list fa-lg"> </span> Sites</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">
+                <span class="fa fa-address-card fa-lg"></span> Contact</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <div class="container">
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-right">Discover & Review</h2>
-                </div>
-                <div class="col">
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail"/>
-                        <div class="media-body align-self-center">
-                            <h3>Our Campsites</h3>
-                            <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
-                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 col-md-3">
-                    <h2>Featured Campsites</h2>
-                </div>
-                <div class="col">
-                    <h3>React Lake Campground</h3>
-                    <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-                 </div>
-             </div>
-
-            <div class="row row-content align-items-center">
-                <div class="col-sm-4 order-sm-last col-md-3">
-                    <h2 class="text-sm-right">Our Community Partners</h2>
-                </div>
-                <div class="col">
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" />
-                        <div class="media-body align-self-center">
-                            <h3>Bootstrap Outfitters</h3>
-                            <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="row row-content align-items-center">
+        <div class="col-sm-4 order-sm-last col-md-3">
+          <h2 class="text-sm-right">Discover & Review</h2>
         </div>
+        <div class="col">
+          <div class="media">
+            <img
+              class="d-flex mr-3 img-thumbnail"
+              src="img/breadcrumb-trail-thumb.jpg"
+              alt="Breadcrumb Trail thumbnail"
+            />
+            <div class="media-body align-self-center">
+              <h3>Our Campsites</h3>
+              <p class="d-none d-sm-block">
+                Explore our growing database of curated campsites and leave your
+                own reviews!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content align-items-center">
+        <div class="col-sm-4 col-md-3">
+          <h2>Featured Campsites</h2>
+        </div>
+        <div class="col">
+          <div class="media">
+            <div class="media-body align-self-center">
+              <h3>React Lake Campground</h3>
+              <p class="d-none d-sm-block">
+                Nestled in the foothills of the Chrome Mountains, this
+                campground on the shores of the pristine React Lake is a
+                favorite for fly fishers.
+              </p>
+            </div>
+            <img
+              class="d-flex ml-3 img-thumbnail"
+              src="img/react-lake-thumb.jpg"
+              alt="Breadcrumb Lake thumbnail"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content align-items-center">
+        <div class="col-sm-4 order-sm-last col-md-3">
+          <h2 class="text-sm-right">Our Community Partners</h2>
+        </div>
+        <div class="col">
+          <div class="media">
+            <img
+              class="d-flex mr-3 img-thumbnail"
+              src="img/bootstrap-thumb.png"
+              alt="Bootstrap Outfitters"
+            />
+            <div class="media-body align-self-center">
+              <h3>Bootstrap Outfitters</h3>
+              <p class="d-none d-sm-block">
+                Bootstrap Outfitters supplies you with gear you need at prices
+                you can't beat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content">
+        <div class="col col-sm-6 mx-auto">
+          <div class="card">
+            <h3 class="card-header bg-info text-white">Reserver a Campsite</h3>
+            <div class="card-body">
+              <form id="reserveForm">
+                <div class="row form-group">
+                  <label class="col-sm-6 col-form-label" for="numCampers"
+                    >Number of Campers</label
+                  >
+
+                  <div class="col">
+                    <select
+                      class="form-control"
+                      name="numCampers"
+                      id="numCampers"
+                    >
+                      <option>Select...</option>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-6 col-form-label" for="date">Date</label>
+                  <div class="col">
+                    <input
+                      class="form-control"
+                      type="date"
+                      id="date"
+                      name="date"
+                      placeholder="mm/dd/yyyy"
+                    />
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col">
+                    <button class="btn btn-primary" type="submit">
+                      Search
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                    <div class="col-4 col-sm-2 offset-1">
-                        <h5>Links</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="aboutus.html">About</a></li>
-                            <li><a href="#">Sites</a></li>
-                            <li><a href="contactus.html">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-6 col-sm-5 text-center">
-                        <h5>Social</h5>
-                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><span class="fa fa-instagram"></span></a>
-                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><span class="fa fa-facebook"></span></a>
-                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><span class="fa fa-twitter"></span></a>
-                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><span class="fa fa-youtube"></span></a>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <a role="button" class="btn btn-link" href="tel:+1206551234"> <span class="fa fa-phone fa-lg text-primary"></span> 1-206-555-1234 </a><br/>
-                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <span class="fa fa-envelope-o fa-lg text-primary"></span> campsites@nucamp.co</a>
-                    </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-4 col-sm-2 offset-1">
+            <h5>Links</h5>
+            <ul class="list-unstyled">
+              <li><a href="#">Home</a></li>
+              <li><a href="aboutus.html">About</a></li>
+              <li><a href="#">Sites</a></li>
+              <li><a href="contactus.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-sm-5 text-center">
+            <h5>Social</h5>
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="http://instagram.com/"
+              ><span class="fa fa-instagram"></span
+            ></a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="http://facebook.com/"
+              ><span class="fa fa-facebook"></span
+            ></a>
+            <a
+              class="btn btn-social-icon btn-twitter"
+              href="http://twitter.com/"
+              ><span class="fa fa-twitter"></span
+            ></a>
+            <a class="btn btn-social-icon btn-google" href="http://youtube.com/"
+              ><span class="fa fa-youtube"></span
+            ></a>
+          </div>
+          <div class="col-sm-4 text-center">
+            <a role="button" class="btn btn-link" href="tel:+1206551234">
+              <span class="fa fa-phone fa-lg text-primary"></span>
+              1-206-555-1234 </a
+            ><br />
+            <a
+              role="button"
+              class="btn btn-link"
+              href="mailto:campsites@nucamp.co"
+            >
+              <span class="fa fa-envelope-o fa-lg text-primary"></span>
+              campsites@nucamp.co</a
+            >
+          </div>
         </div>
+      </div>
     </footer>
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-</body>
-
+  </body>
 </html>
