--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
           </div>
-          <div class="col col-md-4 col-xl-4 mt-4">
-            <a class="btn btn-info btn-lg" href="#reserveForm"
-              >Reserve Campsite</a
-            >
+          <div class="col-md-4 col-xl-4 mt-4">
+            <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at 1-206-555-1234">Reserve Campsite</a>
           </div>
         </div>
       </div>
