Accordion fix to black text

--- a/aboutus.html
+++ b/aboutus.html
@@ -111,7 +111,7 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a data-toggle="collapse" data-target="#bootstrap"> 
+                                <a data-toggle="collapse" data-target="#bootstrap">
                                     Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
                                 </a>
                             </h4>
@@ -125,8 +125,8 @@
                     <div class="card"> 
                         <div role="tab" class="card-header">                     
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#git"> 
-                                Git Out Expeditions <small>Group Adventure Expeditions</small>
+                                <a class="collapsed" data-toggle="collapse" data-target="#git">
+                                    Git Out Expeditions <small>Group Adventure Expeditions</small>
                                 </a>
                             </h4>
                             <div class="collapse" id="git" data-parent="#accordion">
@@ -139,8 +139,8 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#mongo"> 
-                                Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop.</small>
+                                <a class="collapsed" data-toggle="collapse" data-target="#mongo">
+                                    Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
                                 </a>
                             </h4>
                             <div class="collapse" id="mongo" data-parent="#accordion">
@@ -153,7 +153,8 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#node"> Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
+                                <a class="collapsed" data-toggle="collapse" data-target="#node">
+                                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
                                 </a>
                             </h4>
                             <div class="collapse" id="node" data-parent="#accordion">
