--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags always come first -->
-    <meta charset="ut f-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS-->
@@ -158,7 +158,7 @@
       <div class="row row-content">
         <div class="col col-sm-6 mx-auto">
           <div class="card">
-            <h3 class="card-header bg-info text-white">Reserver a Campsite</h3>
+            <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
             <div class="card-body">
               <form id="reserveForm">
                 <div class="row form-group">
@@ -244,14 +244,14 @@
           <div class="col-sm-4 text-center">
             <a role="button" class="btn btn-link" href="tel:+1206551234">
               <span class="fa fa-phone fa-lg text-primary"></span>
-              1-206-555-1234 </a
+              tel:+12065551234 </a
             ><br />
             <a
               role="button"
               class="btn btn-link"
               href="mailto:campsites@nucamp.co"
             >
-              <span class="fa fa-envelope-o fa-lg text-primary"></span>
+              <span class="fa fa-envelope-o"></span>
               campsites@nucamp.co</a
             >
           </div>
