--- a/index.html
+++ b/index.html
@@ -40,12 +40,87 @@
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
           </div>
-          <div class="col-md-4 col-xl-4 mt-4">
-            <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at 1-206-555-1234">Reserve Campsite</a>
+            <div class="col-md-4 col-xl-4 mt-4">
+              <a href="#reserveModal" role="button" class="btn btn-lg btn-info"
+              type="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+            </div>
           </div>
         </div>
       </div>
     </header>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header bg-info text-white">
+            <h3 class="modal-title">Reserve a Campsite</h3>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <form>
+                <div class="row form-group">
+                  <label class="col-sm-6 col-form-label" for="numCampers"
+                    >Number of Campers</label
+                  >
+                  <div class="col">
+                    <select
+                      class="form-control"
+                      name="numCampers"
+                      id="numCampers"
+                    >
+                      <option>Select...</option>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                    </select>
+                  </div>
+                </div>
+                  <div class="form-group row">
+                      <label class="col-sm-6 col-form-label ">Date</label>
+                    <div class="col">
+                    <input
+                        class="form-control"
+                        type="date"
+                        id="date"
+                        name="date"
+                        placeholder="mm/dd/yyyy"/>
+                    </div>
+                  </div>
+
+
+                <div class="form-group row">
+                  <label class="col-sm-6 col-form-label">Campsite Type</label>
+                      <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                          <label class="btn btn-success">
+                            <input type="radio" name="siteType" id="siteTent" value="tent"> Tent
+                          </label>
+                          <label class="btn btn-primary">
+                            <input type="radio" name="siteType" id="siteRV" value="RV"> RV   
+                          </label>
+                      </div>
+                </div>
+
+
+                <div class="form-group row">
+                  <div class="col">
+                      <button class="btn btn-secondary" type="submit">
+                        Cancel
+                      </button>
+                      <button class="btn btn-primary" type="submit">
+                        Search
+                      </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
@@ -120,7 +195,7 @@
                   </div>
                   <div class="form-row">
                     <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                    <button type="submit" class="btn btn-primary btn-sm ml-1" data-dismiss="modal" >Sign in</button>
                   </div>
                 </form>
               </div>
@@ -243,58 +318,7 @@
         </div>
       </div>
 
-      <div class="row row-content">
-        <div class="col col-sm-6 mx-auto">
-          <div class="card">
-            <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-            <div class="card-body">
-              <form id="reserveForm">
-                <div class="row form-group">
-                  <label class="col-sm-6 col-form-label" for="numCampers"
-                    >Number of Campers</label
-                  >
-
-                  <div class="col">
-                    <select
-                      class="form-control"
-                      name="numCampers"
-                      id="numCampers"
-                    >
-                      <option>Select...</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-6 col-form-label" for="date">Date</label>
-                  <div class="col">
-                    <input
-                      class="form-control"
-                      type="date"
-                      id="date"
-                      name="date"
-                      placeholder="mm/dd/yyyy"
-                    />
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col">
-                    <button class="btn btn-primary" type="submit">
-                      Search
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      
 
     <footer class="site-footer">
       <div class="container">
@@ -351,3 +375,64 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
+
+
+
+<!-- <div class="col-md-4 col-xl-4 mt-4">
+  <a href="#reserveForm" role="button" class="btn btn-lg btn-info" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at 1-206-555-1234">Reserve Campsite</a>
+</div> -->
+
+
+
+<!-- <div class="row row-content">
+  <div class="col col-sm-6 mx-auto">
+    <div class="card">
+      <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+      <div class="card-body">
+        <form id="reserveForm">
+          <div class="row form-group">
+            <label class="col-sm-6 col-form-label" for="numCampers"
+              >Number of Campers</label
+            >
+
+            <div class="col">
+              <select
+                class="form-control"
+                name="numCampers"
+                id="numCampers"
+              >
+                <option>Select...</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-6 col-form-label" for="date">Date</label>
+            <div class="col">
+              <input
+                class="form-control"
+                type="date"
+                id="date"
+                name="date"
+                placeholder="mm/dd/yyyy"
+              />
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col">
+              <button class="btn btn-primary" type="submit">
+                Search
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+</div> -->
